<resources>
    <string name="app_name">
        Inventoryator
    </string>

    <string name="app_title">
        Inventoryator
    </string>

    <string name="subtitle">
        A stuff tracker
    </string>

    <string name="load_inventory">
        Load Inventory
    </string>

    <string name="new_inventory">
        New Inventory
    </string>

    <string name="view_inventory">
        View Inventory
    </string>

    <string name="add_inventory">
        Add Inventory
    </string>

    <string name="add_item">
        Add Item
    </string>

    <string name="item_name">
        Item name
    </string>

    <string name="item_number">
        Quantity
    </string>

    <string name="edit_inventory">
        Edit Inventory
    </string>

    <string name="edit_item">
        Save Item
    </string>

    <string name="create_item">
        Add Item
    </string>

    <string name="inventory_name">
        Inventory name
    </string>

    <string name="new_item">
        New Item
    </string>

    <string name="inventory_description">
        Inventory description
    </string>

    <string name="create_inventory">
        Create Inventory
    </string>

    <string name="inventory_id">
        Inventory ID
    </string>

    <string name="action_settings">
        Settings
    </string>

    <string name="default_inventory_title">
        My Inventory
    </string>

    <string name="default_item_title">
        New Item
    </string>

    <string name="remove_inventory">
        Remove Inventory
    </string>

    <string name="remove_inventory_prompt">
        Remove inventory?
    </string>

    <string name="confirm">
        Okay
    </string>

    <string name="login">
        Login
    </string>

    <string name="register">
        Register
    </string>

    <string name="username">
        Username
    </string>

    <string name="password">
        Password
    </string>

    <string name="change_password">
        Change Password
    </string>

    <string name="confirm_password">
        Confirm Password
    </string>

    <string name="logging_in">
        Logging in&#8230;
    </string>

    <string name="logout">
        Logout
    </string>

    <string name="share">
        Share Inventory
    </string>

    <string name="enter_code">
        Enter Code:
    </string>

    <string name="nevermind">
        Nevermind
    </string>

    <string name="not_right">
        Not right
    </string>
</resources>
