<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/Theme.AppCompat.Light.NoActionBar">

    <TextView
        style="@style/Base.TextAppearance.AppCompat.Display3"
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elegantTextHeight="false"
        android:gravity="center_horizontal"
        android:singleLine="false"
        android:text="@string/app_title"
        android:textSize="@dimen/abc_text_size_display_2_material"
        android:textStyle="bold"
        android:typeface="sans"
        android:layout_gravity="center_horizontal" />

    <TextView
        style="@style/TextAppearance.AppCompat.Display1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtitle"
        android:id="@+id/textView7"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/textView"
        android:textSize="@dimen/abc_text_size_subhead_material"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:id="@+id/textView4" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/username_edit_text"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:id="@+id/textView5" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password_edit_text"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:id="@+id/register_button"
            android:layout_weight="1"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:id="@+id/login_button"
            android:layout_weight="1"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp" />
    </LinearLayout>

</LinearLayout>